--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "mssql": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
     "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
