--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "movie-app",
+  "homepage": "https://muhammeddyayla.github.io/Dizimey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -15,6 +18,7 @@
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "gh-pages": "^6.3.0",
     "mssql": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
