deploy ile alakalı ayarlar

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "movie-app",
-  "homepage": "https://muhammeddyayla.github.io/Dizimey",
+  "homepage": "https://muhammedyayla.github.io/Dizimey",
   "private": true,
   "version": "0.0.0",
   "type": "module",
