--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,9 +33,28 @@ jobs:
         run: npm ci
 
       - name: Build project
-        run: npm run build
+        run: |
+          echo "Starting build..."
+          npm run build
+          echo "Build completed successfully"
         env:
           NODE_ENV: production
+          CI: false
+
+      - name: Verify build output
+        run: |
+          echo "Checking dist folder..."
+          ls -la dist/ || echo "dist folder not found"
+          ls -la dist/assets/ || echo "assets folder not found"
+
+      - name: Copy 404.html to dist
+        run: |
+          if [ -f public/404.html ]; then
+            cp public/404.html dist/404.html
+            echo "404.html copied successfully"
+          else
+            echo "public/404.html not found, skipping"
+          fi
 
       - name: Upload production-ready build files
         uses: actions/upload-artifact@v4
