--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  contents: write      # <-- burası kesinlikle write olmalı
+  contents: write
   pages: write
   id-token: write
 
@@ -33,30 +33,12 @@ jobs:
         run: npm ci
 
       - name: Build project
-        run: |
-          echo "Starting build..."
-          npm run build
-          echo "Build completed successfully"
-        env:
-          NODE_ENV: production
-          CI: false
+        run: npm run build
 
-      - name: Verify build output
-        run: |
-          echo "Checking dist folder..."
-          ls -la dist/ || echo "dist folder not found"
-          ls -la dist/assets/ || echo "assets folder not found"
+      - name: Copy 404.html
+        run: cp public/404.html dist/404.html
 
-      - name: Copy 404.html to dist
-        run: |
-          if [ -f public/404.html ]; then
-            cp public/404.html dist/404.html
-            echo "404.html copied successfully"
-          else
-            echo "public/404.html not found, skipping"
-          fi
-
-      - name: Upload production-ready build files
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: production-files
@@ -75,12 +57,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: production-files
-          path: dist # Artifact'i *tekrar* dist klasörüne indirir.
+          path: dist
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist # Dist klasörünü yayınlar.
+          publish_dir: ./dist
           cname: false
