--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-    "name": "movie-app",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-      "preview": "vite preview",
-      "predeploy": "npm run build", 
-      "deploy": "gh-pages -d dist" 
-    },
-    "dependencies": {
-      "@emotion/react": "^11.14.0",
-      "@emotion/styled": "^11.14.1",
-      "@mui/material": "^7.3.5",
-      "@reduxjs/toolkit": "^2.2.3",
-      "axios": "^1.6.8",
-      "gh-pages": "^6.3.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-icons": "^5.5.0",
-      "react-loading": "^2.0.3",
-      "react-paginate": "^8.2.0",
-      "react-redux": "^9.1.2",
-      "react-router-dom": "^6.23.0",
-      "swiper": "^12.0.3"
-    },
-    "devDependencies": {
-      "@types/react": "^18.2.66",
-      "@types/react-dom": "^18.2.22",
-      "@vitejs/plugin-react": "^4.2.1",
-      "eslint": "^8.57.0",
-      "eslint-plugin-react": "^7.34.1",
-      "eslint-plugin-react-hooks": "^4.6.0",
-      "eslint-plugin-react-refresh": "^0.4.6",
-      "vite": "^5.2.0"
-    }
+  "name": "movie-app",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.5",
+    "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
+    "gh-pages": "^6.3.0",
+    "mssql": "^12.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "react-loading": "^2.0.3",
+    "react-paginate": "^8.2.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.0",
+    "swiper": "^12.0.3"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
+}
