Fix GitHub Pages deployment - update 404.html and add keep_files: false

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,3 +66,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
           cname: false
+          keep_files: false
