--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -17,7 +15,6 @@
     "@mui/material": "^7.3.5",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
-    "gh-pages": "^6.3.0",
     "mssql": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +33,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.3.0",
     "vite": "^5.2.0"
   }
 }
