--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
-    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "uuid": "^13.0.0"
+    "mssql": "^11.0.1"
   }
 }
